# msl-specification

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PURPOSE.md  README.md  RELEASE_CHECKLIST.md  llms.txt  package.json  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/agents/: msl-batch-validator.md  msl-validator.md  pre-push-completeness-checker.md
docs/: DOCUMENTATION_STATUS.md  changelog.md  contributing.md  getting-started.md  implementation-reference.md  reference.md  roadmap.md  tools.md  user-guide.md  why-msl.md
docs/guides/: llm-integration.md  quick-start.md  solo-workflow.md  team-workflow.md
docs/patterns/: metaspec-hierarchy.md  metaspec-patterns.md
docs/proposals/: metaspec-governance.md
docs/reference/: grammar.md  markers.md
docs/spec/: changelog.md  roadmap.md
docs/spec/v1.1/: specification.md
docs/tutorials/: ai-implementation.md  first-spec.md  index.md  inheritance.md  templates.md  validation.md
docs/workflows/: ai-completion.md  ai.md  solo.md  team.md
examples/: .mslrc  MSL-CONFIG.md  README.md  composite-markers-example.md  hierarchical-requirements-example.md
examples/advanced/: payment-api.md
examples/basic/: user-auth.md
examples/minimal/: todo-app.md
examples/real-world/: msl-case-study.md
examples/templates/: rest-api-base.md
scripts/: cleanup_tests_for_pytest-msl-spec.md  cleanup_tests_for_pytest.py  run_tests-msl-spec.md  run_tests.sh
specs/: INDEX.md  README.md  msl-complete.md  msl-grammar.md  msl-l0-foundation.md  msl-l1-structure.md  msl-l2-advanced.md  msl-processing.md  msl-semantics.md
specs/applications/: msl-batch-validator.md  msl-tools-spec.md  msl-validation-agent.md
specs/context7-optimization/: msl-implementation-reference-spec.md  msl-llms-txt-spec.md
specs/documentation/: msl-docs-base.md  msl-docs-getting-started.md  msl-docs-readme.md  msl-docs-reference.md  msl-docs-tools.md  msl-docs-tutorials.md  msl-docs-user-guide.md  msl-docs-why-msl.md
specs/documentation/archived/: README.md  msl-docs-project.md  msl-docs-root.md  msl-docs-workflows.md
specs/foundation/: constraints.spec.md  outcomes.spec.md
specs/metaspecs/: msl-core-metaspec.md  msl-documentation-metaspec.md  msl-language-metaspec.md  msl-validation-metaspec.md  testing-framework-metaspec.md
specs/standards/: msl-extension-standards.md  msl-project-organization.md  msl-usage-standards.md
specs/strategy/: architecture.spec.md  philosophy.spec.md
specs/testing/: msl-testing-framework.md
tests/: conftest.py  test_code_links.py  test_composite_markers.py  test_hierarchical_requirements.py  test_validation_config.py
tools/cli/: msl-lint  msl-render
tools/hooks/: pre-commit-msl-check.sh
tools/lib/: __init__.py  code_scanner.py  config.py  parser.py  renderer.py  resolver.py  validator.py
